--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
                 
                 <div class="module-row">
-                    <label for="y3-realities">External Realities / Game Audio</label>
+                    <label for="y3-realities">Extended Realities / Game Audio</label>
                     <input type="number" id="y3-realities" min="0" max="100" placeholder="0-100" onchange="validateInput(this); calculateGrades();">
                 </div>
                 
